Fix footer alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,7 +66,6 @@ footer {
     background-color: lavender;
     color: rgb(128, 92, 136);
     text-align: center;
-    position: fixed;
     bottom: 0;
     width: 100%;
     margin: 0 auto;
